# OOP_Tests

Angaben/: 2024_custom_1.docx  2024_custom_2.docx
Angaben/AnimalRace_1/AnimalRace/: Animal.cpp  Animal.hpp  Rabbit.cpp  Rabbit.hpp  Race.cpp  Race.h  Race.hpp  Turtle.cpp  Turtle.hpp  main.cpp
Angaben/AnimalRace_VS/: Animal.cpp  Animal.h  Rabbit.cpp  Rabbit.h  Race.cpp  Race.h  RunAnimalRun.sln  RunAnimalRun.vcxproj  RunAnimalRun.vcxproj.filters  Turtle.cpp  Turtle.h
Angaben/Trainingsubungen/: Trainingsubungen.cbp  Trainingsubungen.depend  Trainingsubungen.layout  main.cpp
Angaben/Trainingsubungen/include/: Bankdruecken.h  Kniebeugen.h  Mensch.h  Uebung.h
Angaben/Trainingsubungen/src/: Bankdruecken.cpp  Kniebeugen.cpp  Mensch.cpp  Uebung.cpp
Angaben/alte Pruefungen/PR1_fin/: Field.cpp  Field.h  main.cpp
Angaben/alte Pruefungen/PR4fin/: Spell.cpp  Spell.h  main.cpp
Angaben/alte Pruefungen/pr3_monsterslayer_raw/: Arena.cpp  (+2 more)
Lösungen/von anderen/ruslan/2021/: CMakeLists.txt  PlainField.cpp  PlainField.h  RecurringField.cpp  RecurringField.h  field.cpp  field.h  helpers.cpp  helpers.h  main.cpp  world.cpp  world.h
Lösungen/von anderen/ruslan/2023_2/: CMakeLists.txt  main.cpp
Lösungen/von anderen/ruslan/2023_2/include/: Animal.h  Rabbit.h  Race.h  Turtle.h  helpers.h
Lösungen/von anderen/ruslan/2023_2/src/: Animal.cpp  Rabbit.cpp  Race.cpp  Turtle.cpp  helpers.cpp
Uno/: Uno.cbp  Uno.depend  Uno.layout  main.cpp
Uno/include/: Card.h  Game.h  NumberCard.h  Player.h  SpecialCard.h
Uno/src/: Card.cpp  Game.cpp  NumberCard.cpp  Player.cpp  SpecialCard.cpp
(+85 files in other folders)
